--- a/app/index.html
+++ b/app/index.html
@@ -36,33 +36,33 @@
 </header>
 <div class="content">
     <div class="home">
-        <ul class="list list-grid list-grid-3">
+        <ul class="list-grid list-grid-3">
             <li>
-                <a href="#"><i class="icon-microphone"></i></a>
+                <a href="#"><i class="icon-microphone"></i><span>麦克风</span></a>
             </li>
             <li>
-                <a href="#"><i class="icon-youtube-sign"></i></a>
+                <a href="#"><i class="icon-youtube-sign"></i><span>麦克风</span></a>
             </li>
             <li>
-                <a href="#"><i class="icon-google-plus"></i></a>
+                <a href="#"><i class="icon-google-plus"></i><span>麦克风</span></a>
             </li>
             <li>
-                <a href="#"><i class="icon-twitter"></i></a>
+                <a href="#"><i class="icon-twitter"></i><span>麦克风</span></a>
             </li>
             <li>
-                <a href="#"><i class="icon-dribbble"></i></a>
+                <a href="#"><i class="icon-dribbble"></i><span>麦克风</span></a>
             </li>
             <li>
-                <a href="#"><i class="icon-skype"></i></a>
+                <a href="#"><i class="icon-skype"></i><span>麦克风</span></a>
             </li>
             <li>
-                <a href="#"><i class="icon-facebook"></i></a>
+                <a href="#"><i class="icon-facebook"></i><span>麦克风</span></a>
             </li>
             <li>
-                <a href="#"><i class="icon-windows"></i></a>
+                <a href="#"><i class="icon-windows"></i><span>麦克风</span></a>
             </li>
             <li>
-                <a href="#"><i class="icon-weibo"></i></a>
+                <a href="#"><i class="icon-weibo"></i><span>麦克风</span></a>
             </li>
         </ul>
     </div>
